force-app/main/default/objects/Departamentos__c/Departamentos__c.object-meta.xml
<CustomObject>
    <label>Departamento</label>
    <nameField>
        <label>Nombre de Departamentos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>