force-app/main/default/objects/Departamentos__c/fields/F_Pais__c.field-meta.xml
<CustomField>
    <fullName>F_Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pais</label>
    <referenceTo>Pais_R__c</referenceTo>
    <relationshipLabel>Departamentos</relationshipLabel>
    <relationshipName>Departamentos</relationshipName>
    <type>Lookup</type>
</CustomField>