force-app/main/default/objects/Departamentos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>codigo_departamento__c</columns>
    <columns>codigo_pais__c</columns>
    <columns>Departamento__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>